[gd_scene load_steps=8 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://assets/btn_off.png" type="Texture" id=2]
[ext_resource path="res://instances/btn.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/btn_connect.png" type="Texture" id=4]
[ext_resource path="res://tabs/bg.tscn" type="PackedScene" id=5]
[ext_resource path="res://tabs/swipe_tab.tscn" type="PackedScene" id=6]
[ext_resource path="res://tabs/swipe_detect.gd" type="Script" id=7]

[node name="main" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="top_bar" type="Control" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 128 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
__meta__ = {
"_edit_lock_": true
}

[node name="col" type="ColorRect" parent="top_bar"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.921569, 0.796078, 0.117647, 0.960784 )
__meta__ = {
"_edit_lock_": true
}

[node name="btn_shut" type="TextureButton" parent="top_bar"]
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="btns" type="HBoxContainer" parent="top_bar"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_right = 268.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 4
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="btn" parent="top_bar/btns" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 102.0
margin_top = 32.0
margin_right = 166.0
margin_bottom = 96.0
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
btn_type = null
ico = ExtResource( 4 )
ico_col = Color( 0.733333, 0.0745098, 0.384314, 1 )

[node name="main_frame" type="Container" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 128.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
__meta__ = {
"_edit_lock_": true
}

[node name="bg" parent="main_frame" instance=ExtResource( 5 )]
editor/display_folded = true
bg_col = Color( 0.541176, 0.819608, 0.352941, 1 )

[node name="swipe_tab" parent="main_frame" instance=ExtResource( 6 )]

[node name="swipe_detect" type="Control" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

